# GameVault

./: .gitignore  README.md  epic_owned_games.json  pyproject.toml
src/gamevault/: cli.py  main.py
src/gamevault/api/: igdb_client.py
src/gamevault/auth/: routes.py
src/gamevault/db/: models.py  queries.py  setup.py
src/gamevault/scripts/: populate_games.py
src/gamevault/static/: script.js  styles.css
src/gamevault/sync/: epic.py  sanity.py  steam.py
src/gamevault/templates/: connect.html  index.html  login.html  register.html
